--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,18 @@
   year = {2013}
 }
 
+@misc{vsbenchmark,
+title = "VeriSmart benchmark",
+  howpublished={\url{https://github.com/kupl/VeriSmart-benchmarks}}
+  }
+
+@inproceedings{verismart,
+    title={VeriSmart: A Highly Precise Safety Verifier for Ethereum Smart Contracts},
+    author={Sunbeom So and Myungho Lee and Jisu Park and Heejo Lee and Hakjoo Oh},
+    year={2020},
+   booktitle={{IEEE} Symposium on Security \& Privacy},
+   note = {accepted for publication}
+}
 
 @misc{measurepop,
   howpublished="\url{https://github.com/smartanvil/smartanvil.github.io/blob/master/_posts/2018-03-14-on-contract-popularity-analysis.md}",
