--- a/experiments.tex
+++ b/experiments.tex
@@ -1,3 +1,3 @@
 \section{Experimental Evaluation}
 
-In order to evaluate Echidna, we compared its performance to the MythX platform, accessed via the {\tt solfuzz} interface, on a set of reachability targets, produced by insertion of{\tt assert(false)} statements, on a set of benchmark contracts.
+In order to evaluate Echidna, we compared its performance to the MythX platform, accessed via the {\tt solfuzz} interface, on a set of reachability targets, produced by insertion of {\tt assert(false)} statements, on a set of benchmark contracts \cite{vsbenchmark} produced for the VeriSmart safety-checker \cite{VeriSmart}.  We compared to MythX as it was the only other fuzzer we are aware of that supports reachability targets (via supporting assertion-checking).  Comparing fuzzers that only support custom-property checkers or a set of built-in detectors is difficult to do in a fair way, as differences are likely to be due to specification semantics, not behavior exploration capability.
