with abstract, experiments

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,1 @@
-
+Ethereum smart contracts are autonomous programs, operating on a blockchain, that often control significant financial or intellectual property resources.  Bugs in smart contracts can be catastrophic, so effective test generation for smart contracts is critical for developers.  This paper introduces an open source smart contract fuzzer called Echidna that makes it easy to automatically generate tests to detect assertion violations and check custom properties for smart contracts.  Echidna is easy to use out of the box, requiring no complex configuration or deployment of contracts to a local blockchain, and is built to offer rapid feedback, with many property violations detected in less than two minutes.  Echidna has been heavily tuned via empirical experiments to set default configuration parameters (e.g. how often to use mined constants, and how many transactions to include in generated sequences). Echidna has been used in more than 10 large-scale for-pay security audits, and feedback from those audits has strongly informed the evolution of Echidna, both in terms of practical usability with, e.g., smart contract frameworks such as truffle and embark, and in terms of test generation strategies.
