--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6,16 +6,16 @@
 }
 
 @misc{vsbenchmark,
-title = "VeriSmart benchmark",
+title = "{VeriSmart} benchmark",
   howpublished={\url{https://github.com/kupl/VeriSmart-benchmarks}}
   }
 
 @inproceedings{verismart,
-    title={VeriSmart: A Highly Precise Safety Verifier for Ethereum Smart Contracts},
+    title={{VeriSmart}: A Highly Precise Safety Verifier for Ethereum Smart Contracts},
     author={Sunbeom So and Myungho Lee and Jisu Park and Heejo Lee and Hakjoo Oh},
     year={2020},
    booktitle={{IEEE} Symposium on Security \& Privacy},
-   note = {accepted for publication}
+   notes = {accepted for publication}
 }
 
 @misc{measurepop,
@@ -156,6 +156,11 @@ title = "VeriSmart benchmark",
   year={2017}
 }
 
+@misc{mythx,
+  howpublished="\url{https://mythx.io/}",
+  author="Consensys Diligence",
+  }
+
 @misc{solhint-code,
   title={Solhint: an open source project for linting solidity code},
   author={Protofire},
@@ -168,6 +173,14 @@ title = "VeriSmart benchmark",
   author={Melon Project},
   howpublished = "\url{https://github.com/melonproject/oyente}",
   year={2017}
+}
+
+@inproceedings{Harvey,
+  title={Targeted greybox fuzzing with static lookahead analysis},
+  author={W{\"u}stholz, Valentin and Christakis, Maria},
+  booktitle="International Conference on Software Engineering",
+  year={2020},
+  notes="accepted for publication"
 }
 
 @misc{etherscan,
@@ -183,6 +196,24 @@ title = "VeriSmart benchmark",
   howpublished = "\url{https://github.com/TrustWallet/tokens}",
   year={2018}
 }
+
+@inproceedings{contractfuzzer,
+  title={Contractfuzzer: Fuzzing smart contracts for vulnerability detection},
+  author={Jiang, Bo and Liu, Ye and Chan, WK},
+  booktitle={Proceedings of the 33rd ACM/IEEE International Conference on Automated Software Engineering},
+  pages={259--269},
+  year={2018}
+}
+
+@misc{solfuzz,
+  howpublished="\url{https://github.com/b-mueller/solfuzz}",
+  author = "Bernhard Mueller"
+  }
+
+@misc{chainfuzz,
+  howpublished="\url{https://github.com/ChainSecurity/ChainFuzz}",
+  author="{Chain Security}"
+  }
 
 @inproceedings{oyente,
  author = {Luu, Loi and Chu, Duc-Hiep and Olickel, Hrishi and Saxena, Prateek and Hobor, Aquinas},
