--- a/bibliography.bib
+++ b/bibliography.bib
@@ -128,6 +128,23 @@ title = "{VeriSmart} benchmark",
   year={Oct 8, 2018 (acceded on Jan 10, 2019)}
 }
 
+@inproceedings{SurveyAttacks,
+ author = {Atzei, Nicola and Bartoletti, Massimo and Cimoli, Tiziana},
+ title = {A Survey of Attacks on {Ethereum} Smart Contracts {SoK}},
+ booktitle = {International Conference on Principles of Security and Trust},
+ year = {2017},
+ pages = {164--186},
+ url = {https://doi.org/10.1007/978-3-662-54455-6_8},
+ doi = {10.1007/978-3-662-54455-6_8}
+} 
+
+@misc{reports,
+  title={Trail of Bits Security Reviews},
+  author = {{Trail of Bits}},
+  howpublished="\url{https://github.com/trailofbits/publications\#security-reviews}",
+  year=2019
+  }
+
 @misc{DAO,
   title={Analysis of the DAO exploit},
   author={{Phil Daian }},
@@ -311,6 +328,13 @@ title = "{VeriSmart} benchmark",
   booktitle = {ACSAC},
   title = {Finding The Greedy, Prodigal, and Suicidal Contracts at Scale},
   year = {2018}
+}
+
+@inproceedings{FC20,
+  title={What are the Actual Flaws in Important Smart Contracts (and How Can We Find Them)?},
+  author={Alex Groce and Josselin Feist and Gustavo Grieco and Michael Colburn},
+  year={2020},
+  booktitle="International Conference on Financial Cryptography and Data Security"
 }
 
 
