--- a/introduction.tex
+++ b/introduction.tex
@@ -1,2 +1,5 @@
 \section{Introduction}
 
+Smart contracts for the Ethereum blockchain \cite{buterin2013whitepaper}, usually written in the Solidity language \cite{wood2014yellow}, facilitate and verify high-value financial transactions, as well as tracking physical goods and intellectual property.  It is essential that such largely autonomous programs be correct and secure.  Unfortunately, such contracts are often \emph{not} correct and secure \cite{SurveyAttacks}.  Recent work surveying and categorizing flaws in critical contracts \cite{FC20} established that fuzzing, using custom user-defined properties, might detect up to 63\% of the most severe and exploitable flaws in contracts.  It is therefore critical to make high-quality, easy-to-use fuzzing available to smart contract developers and security auditors.
+
+Echidna \cite{echidna-code} is an open source Ethereum smart contract fuzzer that supports user-defined properties (for property-based testing, as well as assertion checking and gas use estimation.  Echidna supports the Solidity and Vyper smart contract languages and most contract development frameworks, including truffle and embark. Trail of Bits has used echidna internally in numerous code audits \cite{FC20,reports}
