--- a/bibliography.bib
+++ b/bibliography.bib
@@ -207,6 +207,48 @@ title = "{VeriSmart} benchmark",
   year={2018}
 }
 
+@inproceedings{ClaessenH00,
+author    = {Koen Claessen and
+           John Hughes},
+title     = {{QuickCheck}: a lightweight tool for random testing of {Haskell}
+           programs},
+booktitle = {International Conference on Functional Programming {(ICFP)}},
+year      = {2000},
+pages     = {268--279},
+ee        = {http://doi.acm.org/10.1145/351240.351266},
+bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{regexpMut,
+ author = {Groce, Alex and Holmes, Josie and Marinov, Darko and Shi, August and Zhang, Lingming},
+ title = {An Extensible, Regular-expression-based Tool for Multi-language Mutant Generation},
+ booktitle = {Proceedings of the 40th International Conference on Software Engineering: Companion Proceeedings},
+ series = {ICSE '18},
+ year = {2018},
+ isbn = {978-1-4503-5663-3},
+ location = {Gothenburg, Sweden},
+ pages = {25--28},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/3183440.3183485},
+ doi = {10.1145/3183440.3183485},
+ acmid = {3183485},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {multi-language tools, mutation testing, regular expressions},
+} 
+
+
+@incollection{MutationSurvey,
+  title={Mutation testing advances: an analysis and survey},
+  author={Papadakis, Mike and Kintis, Marinos and Zhang, Jie and Jia, Yue and Le Traon, Yves and Harman, Mark},
+  booktitle={Advances in Computers},
+  volume={112},
+  pages={275--378},
+  year={2019},
+  publisher={Elsevier}
+}
+
+
 @misc{dataset-small,
   title={Directory of ERC20 tokens},
   author={Trust Wallet},
