--- a/experiments.tex
+++ b/experiments.tex
@@ -6,7 +6,7 @@ MythX is a commercial platform for analyzing smart contracts.  It offers a free 
 
 To compare MythX and Echidna, we first analyzed the contracts in the VeriSmart benchmark \cite{vsbenchmark} and identified all contracts such that 1) both tools ran on the contract\footnote{MythX/{\tt solfuzz} failed to compile some contracts for unknown reasons, and timed out without producing results on others, and Echidna does not currently easily support contracts with constructors that require arguments.} and 2) neither tool reported any issues with the contract.  This left us with 12 clean contracts, over which to compare the tools' ability to explore behavior.  We inserted {\tt assert(false)} statements into each of these contracts, after every statement, resulting in 459 contracts representing reachability targets.  We discarded 44 of these, as the assert was unconditionally executed in the contract's constructor, so no behavior exploration was required to reach it.
 
-We then ran {\tt solfuzz}'s quick check and Echidna with a two-minute timeout on a randomly selected set of 40 targets.  Echidna was able to produce a transaction sequence reaching the assert for 19 of the 40 targets, and {\tt solfuzz}/MythX generated a reaching sequence for 15 of the 40, all of which were also reached by Echidna. We manually examined the targets not deteced by either tool, and believe them all to represent unreachable targets, usually due to being inserted after an unavoidable {\tt return} statement, or being inserted in the {\tt SafeMath} contract, which redefines {\tt assert}.  Of the reachable targets, Echidna was able to produce sequences for 100\%, and {\tt solfuzz}/MythX for 78.9\%.  Due to the limit on MythX runs, we were unable to statistically determine the stability of its results.  For Echidna, we repeated each experiment 30 times, and Echidna always reached each target.
+We then ran {\tt solfuzz}'s quick check and Echidna with a two-minute timeout on a randomly selected set of 40 targets.  Echidna was able to produce a transaction sequence reaching the assert for 19 of the 40 targets, and {\tt solfuzz}/MythX generated a reaching sequence for 15 of the 40, all of which were also reached by Echidna. We manually examined the targets not deteced by either tool, and believe them all to represent unreachable targets, usually due to being inserted after an unavoidable {\tt return} statement, or being inserted in the {\tt SafeMath} contract, which redefines {\tt assert}.  Of the reachable targets, Echidna was able to produce sequences for 100\%, and {\tt solfuzz}/MythX for 78.9\%.  For Echidna, we repeated each experiment 10 more times, and Echidna always reached each target.  Due to the limit on MythX runs, even under a developer license (200 executions/month), we were unable to statistically determine the stability of its results to the same degree, but can confirm that  for two of the targets, a second run succeeded, and for two of the targets three additional runs still failed to reach the assert.  Running {\tt solfuzz} with the {\tt --mode standard} argument (not available to free accounts) did detect all four, but it required at least 15 minutes of analysis time in each case.
 
 \begin{figure}
   \begin{code}
@@ -23,6 +23,6 @@ if (balances[\_from] >= \_amount
   \label{fig:code}
   \end{figure}
 
-Figure \ref{fig:code} shows the key part of the code for one of the four targets Echidna, but not {\tt solfuzz}/MythX, was able to reach.  The assert can only be executed when a call has been made to the {\tt approve} function, allowing the sender of the {\tt transferFrom} call to send an amount greater than or equal to {\tt \_amount}, and when  the contract from which transfer is to be made has a token balance greater than {\tt \_amount}.  Generating a sequence with the proper set of functions called and the proper relationships between variables is a difficult problem, but Echidna's heuristic use of small numeric values in arguments and heuristic repetiton of addresses in arguments and as message senders is able to navigate the set of constraints easily.  A similar set of constraints over allowances and/or senders and function arguments is involved in two of the other four targets where Echidna performs better.
+Figure \ref{fig:code} shows the key part of the code for one of the four targets Echidna, but not {\tt solfuzz}/MythX (even with additional runs), was able to reach within 2 minutes.  The assert can only be executed when a call has been made to the {\tt approve} function, allowing the sender of the {\tt transferFrom} call to send an amount greater than or equal to {\tt \_amount}, and when  the contract from which transfer is to be made has a token balance greater than {\tt \_amount}.  Generating a sequence with the proper set of functions called and the proper relationships between variables is a difficult problem, but Echidna's heuristic use of small numeric values in arguments and heuristic repetiton of addresses in arguments and as message senders is able to navigate the set of constraints easily.  A similar set of constraints over allowances and/or senders and function arguments is involved in two of the other four targets where Echidna performs better.
 
 
