--- a/experiments.tex
+++ b/experiments.tex
@@ -6,7 +6,9 @@ MythX is a commercial platform for analyzing smart contracts.  It offers a free 
 
 To compare MythX and Echidna, we first analyzed the contracts in the VeriSmart benchmark \cite{vsbenchmark} and identified all contracts such that 1) both tools ran on the contract\footnote{MythX/{\tt solfuzz} failed to compile some contracts for unknown reasons, and timed out without producing results on others, and Echidna does not currently easily support contracts with constructors that require arguments.} and 2) neither tool reported any issues with the contract.  This left us with 12 clean contracts, over which to compare the tools' ability to explore behavior.  We inserted {\tt assert(false)} statements into each of these contracts, after every statement, resulting in 459 contracts representing reachability targets.  We discarded 44 of these, as the assert was unconditionally executed in the contract's constructor, so no behavior exploration was required to reach it.
 
-We then ran {\tt solfuzz}'s quick check and Echidna with a two-minute timeout on a randomly selected set of 40 targets.  Echidna was able to produce a transaction sequence reaching the assert for 19 of the 40 targets, and {\tt solfuzz}/MythX generated a reaching sequence for 15 of the 40, all of which were also reached by Echidna. We manually examined the targets not deteced by either tool, and believe them all to represent unreachable targets, usually due to being inserted after an unavoidable {\tt return} statement, or being inserted in the {\tt SafeMath} contract, which redefines {\tt assert}.  Of the reachable targets, Echidna was able to produce sequences for 100\%, and {\tt solfuzz}/MythX for 78.9\%.  For Echidna, we repeated each experiment 10 more times, and Echidna always reached each target.  Due to the limit on MythX runs, even under a developer license (200 executions/month), we were unable to statistically determine the stability of its results to the same degree, but can confirm that  for two of the targets, a second run succeeded, and for two of the targets three additional runs still failed to reach the assert.  Running {\tt solfuzz} with the {\tt --mode standard} argument (not available to free accounts) did detect all four, but it required at least 15 minutes of analysis time in each case.
+We then ran {\tt solfuzz}'s quick check and Echidna with a two-minute timeout on a randomly selected set of 40 targets.  Echidna was able to produce a transaction sequence reaching the assert for 19 of the 40 targets, and {\tt solfuzz}/MythX generated a reaching sequence for 15 of the 40, all of which were also reached by Echidna.  While the time to reach the assertion was usually close to two minutes with {\tt solfuzz}, Echidna needed a maximum of only 52 seconds to hit the hardest target; the mean time required was 13.9 seconds, and the median time was only 6.9 seconds.
+
+We manually examined the targets not deteced by either tool, and believe them all to represent unreachable targets, usually due to being inserted after an unavoidable {\tt return} statement, or being inserted in the {\tt SafeMath} contract, which redefines {\tt assert}.  Of the reachable targets, Echidna was able to produce sequences for 100\%, and {\tt solfuzz}/MythX for 78.9\%.  For Echidna, we repeated each experiment 10 more times, and Echidna always reached each target.  Due to the limit on MythX runs, even under a developer license (200 executions/month), we were unable to statistically determine the stability of its results to the same degree, but can confirm that  for two of the targets, a second run succeeded, and for two of the targets three additional runs still failed to reach the assert.  Running {\tt solfuzz} with the {\tt --mode standard} argument (not available to free accounts) did detect all four, but it required at least 15 minutes of analysis time in each case.
 
 \begin{figure}
   \begin{code}
